final service tests