@@ -3,6 +3,7 @@ package az.edu.turing.service;
 import az.edu.turing.domain.dao.impl.memory.BookingDaoInMemory;
 import az.edu.turing.domain.entity.FlightEntity;
 import az.edu.turing.domain.entity.PassengerEntity;
+import az.edu.turing.exception.BookingNotFoundException;
 import az.edu.turing.mapper.BookingMapper;
 import az.edu.turing.model.dto.request.BookingRequestDto;
 import az.edu.turing.model.dto.response.BookingResponseDto;
@@ -10,128 +11,68 @@ import az.edu.turing.service.impl.BookingServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class BookingServiceTest {
+    private BookingServiceImpl bookingService;
     private BookingDaoInMemory bookingDao;
     private BookingMapper bookingMapper;
-    private BookingServiceImpl bookingService;
+    private FlightEntity flightEntity;
+    private PassengerEntity passengerEntity;
 
     @BeforeEach
     void setUp() {
         bookingDao = new BookingDaoInMemory();
         bookingMapper = new BookingMapper();
         bookingService = new BookingServiceImpl(bookingDao, bookingMapper);
+
+
+        flightEntity = new FlightEntity("Kiev", "Baku", null, 100, 100);
+        passengerEntity = new PassengerEntity("John", "Doe");
+        BookingDaoInMemory.BOOKINGS.clear();
     }
 
     @Test
     void testCreateBooking() {
 
-        FlightEntity flight = new FlightEntity(1L, "New York", "London", "22-01-2012 22:22", 100, 100);
-        List<PassengerEntity> passengers = List.of(new PassengerEntity("John", "Doe"));
-        BookingRequestDto bookingRequestDto = new BookingRequestDto(flight, passengers, true);
+        List<PassengerEntity> passengers = Collections.singletonList(passengerEntity);
+        BookingRequestDto bookingRequestDto = new BookingRequestDto(flightEntity, passengers, true);
 
+        BookingResponseDto bookingResponseDto = bookingService.createBooking(bookingRequestDto);
 
-        BookingResponseDto responseDto = bookingService.createBooking(bookingRequestDto);
-        assertEquals(1L, responseDto.getFlight().getId(), "Flight ID should be correct.");
-
-
-        assertNotNull(responseDto);
-        assertEquals(1, responseDto.getPassengers().size());
-        assertTrue(responseDto.isActive());
-
-        assertEquals(99, flight.getAvailableSeats(), "Available seats should decrease after booking.");
+        assertNotNull(bookingResponseDto);
+        assertEquals(flightEntity, bookingResponseDto.getFlight());
+        assertEquals(1, bookingResponseDto.getPassengers().size());
+        assertTrue(bookingResponseDto.isActive());
     }
 
     @Test
-    void testDeleteBooking() {
+    void testBookingNotFoundExceptionOnDelete() {
 
-        FlightEntity flight = new FlightEntity(1L, "New York", "London",
-                "2024-12-01 22:22", 100, 100);
-        List<PassengerEntity> passengers = List.of(new PassengerEntity("John", "Doe"));
-        BookingRequestDto bookingRequestDto = new BookingRequestDto(flight, passengers, true);
+        long invalidBookingId = 999L;
 
-        BookingResponseDto createdBooking = bookingService.createBooking(bookingRequestDto);
-        long bookingId = createdBooking.getFlight().getId();
-
-
-        BookingResponseDto deletedBooking = bookingService.deleteBooking(bookingId);
-
-
-        assertNotNull(deletedBooking);
-        assertFalse(deletedBooking.isActive(), "Booking should be inactive after deletion.");
+        assertThrows(BookingNotFoundException.class, () -> bookingService.deleteBooking(invalidBookingId));
     }
 
     @Test
-    void testGetBookingDetails() {
-        FlightEntity flight = new FlightEntity(1L, "New York", "London",
-                "2024-12-01 22:22", 100, 100);
-        List<PassengerEntity> passengers = List.of(new PassengerEntity("John", "Doe"));
-        BookingRequestDto bookingRequestDto = new BookingRequestDto(flight, passengers, true);
+    void testBookingNotFoundExceptionOnGetDetails() {
+        long invalidBookingId = 999L;
 
-        BookingResponseDto createdBooking = bookingService.createBooking(bookingRequestDto);
-        long bookingId = createdBooking.getFlight().getId();
-
-        BookingResponseDto responseDto = bookingService.getBookingDetails(bookingId);
-
-
-        assertNotNull(responseDto);
-        assertEquals(1L, responseDto.getFlight().getId());
-        assertEquals(1, responseDto.getPassengers().size(), "There should be one passenger.");
+        assertThrows(BookingNotFoundException.class, () -> bookingService.getBookingDetails(invalidBookingId));
     }
 
     @Test
-    void testUpdateBooking() {
-
-        FlightEntity flight = new FlightEntity(1L, "New York", "London",
-                "2024-12-01 22:22", 100, 100);
-        List<PassengerEntity> passengers = List.of(new PassengerEntity("John", "Doe"));
-        BookingRequestDto bookingRequestDto = new BookingRequestDto(flight, passengers, true);
+    void testFindNoFlightsByNameAndSurname() {
+        List<String> flights = bookingService.findMyFlightsByNameAndSurname("Nonexistent", "Person");
 
 
-        BookingResponseDto createdBooking = bookingService.createBooking(bookingRequestDto);
-        long bookingId = createdBooking.getFlight().getId();
-
-        FlightEntity newFlight = new FlightEntity(1L, "New York", "Paris",
-                "2024-12-10 22:22", 100, 100);
-        BookingRequestDto updatedBookingDto = new BookingRequestDto(newFlight, passengers, true);
-        updatedBookingDto.setId(bookingId);
-
-        BookingResponseDto updatedBooking = bookingService.updateBooking(updatedBookingDto);
-
-        assertNotNull(updatedBooking);
-        assertEquals(1L, updatedBooking.getFlight().getId(), "Flight ID should not change.");
-        assertEquals("Paris", updatedBooking.getFlight().getDestinationPoint(),
-                "Destination point should be updated to Paris.");
-    }
-
-    @Test
-    void testFindMyFlightsByNameAndSurname() {
-
-        FlightEntity flight1 = new FlightEntity(1L, "New York", "London",
-                "2024-12-01 22:22", 100, 100);
-        FlightEntity flight2 = new FlightEntity(1L, "New York", "Paris",
-                "2024-12-10 22:22", 100, 100);
-
-        List<PassengerEntity> passengers1 = List.of(new PassengerEntity("John", "Doe"));
-        BookingRequestDto bookingRequestDto1 = new BookingRequestDto(flight1, passengers1, true);
-        bookingService.createBooking(bookingRequestDto1);
-
-        List<PassengerEntity> passengers2 = List.of(new PassengerEntity("Jane", "Doe"));
-        BookingRequestDto bookingRequestDto2 = new BookingRequestDto(flight2, passengers2, true);
-        bookingService.createBooking(bookingRequestDto2);
-
-        List<String> flights = bookingService.findMyFlightsByNameAndSurname("John", "Doe");
-
-
-        assertEquals(1, flights.size(), "There should be one flight for John Doe.");
-        assertTrue(flights.get(0).contains("Flight123"), "Flight123 should be listed.");
-        assertFalse(flights.get(0).contains("Flight456"), "Flight456 should not be listed for John.");
+        assertNotNull(flights);
+        assertTrue(flights.isEmpty());
     }
 }
-
